foi adicionado stilos na pagina de salas

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,105 @@
-.time{
-    width: 200px;
-    height: 300px;
-    border-radius: 10px;
-    background-color: brown;
+.estrutura {
+  display: flex;
+  flex-direction: column;
+}
+.estrutura .cabecalho {
+  height: 150px;
+  background-color: orangered;
+  border-radius: 10px;
+  box-shadow: darkgrey 1px 1px 10px;
+}
+.estrutura .divLayout, .estrutura > div > div:last-of-type, .estrutura > div > div:first-of-type {
+  display: flex;
+  border-radius: 10px;
+  box-shadow: darkgrey 1px 1px 10px;
+}
+.estrutura > div {
+  display: flex;
+  justify-content: space-between;
+  width: 99%;
+  padding: 10px;
+}
+.estrutura > div > div:first-of-type {
+  min-width: 100px;
+  width: 10%;
+  min-height: 530px;
+  margin-right: 10px;
+}
+.estrutura > div > div:last-of-type {
+  width: 89%;
+  flex-direction: column;
+  padding: 10px;
+}
+
+@media screen and (max-width: 740px) {
+  .estrutura > div {
+    justify-content: center;
+    padding: 10px 0;
+    width: 100%;
+  }
+  .estrutura > div > div:first-of-type {
+    display: none;
+  }
+  .estrutura > div > div:last-of-type {
+    width: 100%;
+  }
+}
+.container-room {
+  width: 100%;
+  height: 100px;
+  background-color: #038101;
+  border-radius: 10px;
+  margin: 10px 0;
+  align-self: center;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  font-family: "Arial";
+  padding: 5px;
+}
+.container-room > h1 {
+  width: 250px;
+}
+.container-room .info {
+  display: flex;
+  flex-direction: column;
+  width: 250px;
+}
+.container-room .info > p {
+  width: 100%;
+}
+.container-room .actions > img {
+  color: red;
+  width: 80px;
+  height: 80px;
+}
+
+@media screen and (max-width: 740px) {
+  .container-room {
+    flex-direction: column;
+    height: auto;
+  }
+  .container-room > h1 {
+    width: 100%;
+    text-align: center;
+  }
+  .container-room .info {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  .container-room .info > p {
+    width: 100%;
+    text-align: center;
+  }
+  .container-room .actions {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+  }
+  .container-room .actions > img {
+    color: red;
+    width: 80px;
+    height: 80px;
+  }
 }
