--- a/resources/css/_layout.scss
+++ b/resources/css/_layout.scss
@@ -24,6 +24,8 @@
             width: 10%;
             min-height:530px;
             margin-right: 10px;
+            flex-direction: column;
+            padding: 10px;
         }
         
         &>div:last-of-type{
